SERVER-12962 Set ok field on failed upconverted writes